Record the @QuarkusTest workaround in the specification
Measured how the toolchain runs tests: the forked JVM inherits the environment
of ./kotlin, its working directory is the module directory, and a
LauncherSessionListener on the test classpath is auto-registered and can set
system properties the tests then see. generated.resources accepts
fragment.isTest, which also makes the producing task a dependency of
compileJvmTest.

So a plugin can supply everything BeforeTestAction sets except
TEST_TO_MAIN_MAPPINGS, which PathTestHelper reads with System.getenv in a
static initializer. That one line stays with the user until either the
toolchain lets a plugin contribute test-JVM properties or Quarkus falls back
to a system property.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>